--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -78,7 +78,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/profilePic.png" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assetts/img/profilePic.png" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -138,7 +138,7 @@ I am a highly motivated and dedicated software developer with a strong passion f
 Focusing in solution-driven web developer adept at contributing to highly collaborative work environment and finding solutions. Proven experience developing consumer-focused websites using HTML, CSS, PHP and JavaScript. Good knowledge of the best practices for web design, and user experience
                     </p>
                     <button class="btn btn-primary" type="submit">
-                      <a class="anchor" href="/DevFolio/assets/CV.pdf">Get My Resume</a>
+                      <a class="anchor" href="assets/CV_2024_forCucumberTauranga.pdf">Get My Resume</a>
                     </button>
 
                   </div>
@@ -236,7 +236,7 @@ Focusing in solution-driven web developer adept at contributing to highly collab
       <div class="col-lg-4 col-md-6">
         <div class="work-box">
           <div class="work-img">
-            <a href="src/currency_converter_app"> <img src="assets/img/project1.png" alt="project one image" class="img-fluid"></a>
+            <a href="src/currency_converter_App/index.html"> <img src="assets/img/project1.png" alt="project one image" class="img-fluid"></a>
           </div>
           <div class="work-content">
             <div class="row">
@@ -260,7 +260,7 @@ Focusing in solution-driven web developer adept at contributing to highly collab
       <div class="col-lg-4 col-md-6">
         <div class="work-box">
           <div class="work-img">
-            <img src="assets/img/fsw-donalds.jpeg" alt="FSW Donalds" class="img-fluid">
+            <a href="https://fullstackweek-donalds-nu.vercel.app/fsw-donalds"><img src="assets/img/fsw-donalds.jpeg" alt="FSW Donalds" class="img-fluid"></a>
           </div>
           <div class="work-content">
             <div class="row">
@@ -393,7 +393,7 @@ Focusing in solution-driven web developer adept at contributing to highly collab
       </div>
     </div><!-- End Testimonials Section -->
 
-    n -->
+    
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
