--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -236,7 +236,7 @@ Focusing in solution-driven web developer adept at contributing to highly collab
       <div class="col-lg-4 col-md-6">
         <div class="work-box">
           <div class="work-img">
-            <a href="src/currency_converter_App/index.html"> <img src="assets/img/project1.png" alt="project one image" class="img-fluid"></a>
+            <a href="https://currency-converter-app-gamma-ten.vercel.app/"> <img src="assets/img/project1.png" alt="project one image" class="img-fluid"></a>
           </div>
           <div class="work-content">
             <div class="row">
@@ -280,107 +280,12 @@ Focusing in solution-driven web developer adept at contributing to highly collab
         </div>
       </div>
 
-      <!-- Card 3 -->
-      <div class="col-lg-4 col-md-6">
-        <div class="work-box">
-          <div class="work-img">
-            <img src="assets/img/work-3.jpg" alt="E-Commerce" class="img-fluid">
-          </div>
-          <div class="work-content">
-            <div class="row">
-              <div class="col-sm-8">
-                <h2 class="w-title">E-Commerce Platform</h2>
-                <div class="w-more">
-                  <span class="w-ctegory">Full Stack</span> / <span class="w-date">2023</span>
-                </div>
-              </div>
-              <div class="col-sm-4 text-end">
-                <a href="#" class="btn btn-link p-0">
-                  <i class="bi bi-plus-circle fs-3"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Card 4 -->
-      <div class="col-lg-4 col-md-6">
-        <div class="work-box">
-          <div class="work-img">
-            <img src="assets/img/work-4.jpg" alt="Dashboard" class="img-fluid">
-          </div>
-          <div class="work-content">
-            <div class="row">
-              <div class="col-sm-8">
-                <h2 class="w-title">Social Dashboard</h2>
-                <div class="w-more">
-                  <span class="w-ctegory">UI/UX</span> / <span class="w-date">2023</span>
-                </div>
-              </div>
-              <div class="col-sm-4 text-end">
-                <a href="#" class="btn btn-link p-0">
-                  <i class="bi bi-plus-circle fs-3"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Card 5 -->
-      <div class="col-lg-4 col-md-6">
-        <div class="work-box">
-          <div class="work-img">
-            <img src="assets/img/work-5.jpg" alt="Task App" class="img-fluid">
-          </div>
-          <div class="work-content">
-            <div class="row">
-              <div class="col-sm-8">
-                <h2 class="w-title">Task Manager</h2>
-                <div class="w-more">
-                  <span class="w-ctegory">Mobile</span> / <span class="w-date">2023</span>
-                </div>
-              </div>
-              <div class="col-sm-4 text-end">
-                <a href="#" class="btn btn-link p-0">
-                  <i class="bi bi-plus-circle fs-3"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Card 6 -->
-      <div class="col-lg-4 col-md-6">
-        <div class="work-box">
-          <div class="work-img">
-            <img src="assets/img/work-6.jpg" alt="Analytics" class="img-fluid">
-          </div>
-          <div class="work-content">
-            <div class="row">
-              <div class="col-sm-8">
-                <h2 class="w-title">Analytics Platform</h2>
-                <div class="w-more">
-                  <span class="w-ctegory">Data</span> / <span class="w-date">2023</span>
-                </div>
-              </div>
-              <div class="col-sm-4 text-end">
-                <a href="#" class="btn btn-link p-0">
-                  <i class="bi bi-plus-circle fs-3"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+     
   </div>
 </section>
 <!-- End Portfolio Section -->
 
- 
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -453,10 +358,10 @@ Focusing in solution-driven web developer adept at contributing to highly collab
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                        expedita aperiam aliquid at.
-                        Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                        mollitia inventore?
+                        We love hearing from our clients and community! Whether you have questions, feedback, 
+                        or simply want to connect, we’re here to help. 
+                        Reach out to us using the contact details below, and let us know how we can assist you. 
+                        Your message matters to us, and we’ll do our best to respond promptly.
                       </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> 2/10 Monowai street</li>
