--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -78,7 +78,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assetts/img/profilePic.png" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/profilePic.png" class="img-fluid rounded b-shadow-a" alt="profilePic">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
