--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -316,38 +316,38 @@ Focusing in solution-driven web developer adept at contributing to highly collab
                       </h5>
                     </div>
                     <div>
-                      <form action="https://formsubmit.co/rodrigo79rfn@gmail.com" method="POST" class="php-email-form"></form>
+                      <form action="https://formspree.io/f/xjkyavwn" method="POST" class="php-email-form">
                         <div class="row">
-                          <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                            <div class="col-md-12 mb-3">
+                                <div class="form-group">
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                                </div>
                             </div>
-                          </div>
-                          <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                            <div class="col-md-12 mb-3">
+                                <div class="form-group">
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                                </div>
                             </div>
-                          </div>
-                          <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                            <div class="col-md-12 mb-3">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                                </div>
                             </div>
-                          </div>
-                          <div class="col-md-12">
-                            <div class="form-group">
-                              <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                                </div>
                             </div>
-                          </div>
-                          <div class="col-md-12 text-center my-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
-                          </div>
-                          <div class="col-md-12 text-center">
-                            <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
-                          </div>
+                            <div class="col-md-12 text-center my-3">
+                                <div class="loading">Loading</div>
+                                <div class="error-message"></div>
+                                <div class="sent-message">Your message has been sent. Thank you!</div>
+                            </div>
+                            <div class="col-md-12 text-center">
+                                <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+                            </div>
                         </div>
-                      </form>
+                    </form>
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -366,7 +366,7 @@ Focusing in solution-driven web developer adept at contributing to highly collab
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> 2/10 Monowai street</li>
                         <li><span class="bi bi-phone"></span> (+64) 0212253555</li>
-                        <li><span class="bi bi-envelope"></span> rodrigo79rfn@gmail.com</li>
+                        <li><span class="bi bi-envelope"></span> rdefraganunes@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
@@ -414,7 +414,7 @@ Focusing in solution-driven web developer adept at contributing to highly collab
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/js/contact.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
