--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -131,11 +131,11 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Hello my name is Rodrigo. I am entusiastic software developer.
+                      Hello, my name is Rodrigo. I am entusiastic software developer.
 
-I am a highly motivated and dedicated software developer with a strong passion for creating impactful software solutions. My goal is to leverage my technical skills and knowledge to contribute to the development of cutting-edge technologies that shape our digital future
+I am a highly motivated and dedicated software developer who is passionate about creating impactful software solutions. My goal is to leverage my technical skills and knowledge to contribute to the development of cutting-edge technologies that shape our digital future
 
-Focusing in solution-driven web developer adept at contributing to highly collaborative work environment and finding solutions. Proven experience developing consumer-focused websites using HTML, CSS, PHP and JavaScript. Good knowledge of the best practices for web design, and user experience
+Solution-driven web developer adept at contributing to highly collaborative work environments and finding solutions. Proven experience developing consumer-focused websites using HTML, CSS, PHP and JavaScript. Good knowledge of the best practices for web design, and user experience
                     </p>
                     <button class="btn btn-primary" type="submit">
                       <a class="anchor" href="assets/CV_2024_forCucumberTauranga.pdf">Get My Resume</a>
@@ -191,7 +191,7 @@ Focusing in solution-driven web developer adept at contributing to highly collab
                 <p class="s-description text-center">
                   Creating, building, and maintaining websites and web applications with a combination of programming, designing, and other technical skills to bring a website to life. Encompasses both front-end development and back-end development.
                 <p>
-                  Work on all aspects of web development, including building the user interface, handling server-side logic, and integrating databases and APIs.
+                  Worked on all aspects of web development, including building the user interface, handling server-side logic, and integrating databases and APIs.
                 </p>  
                 </p>
               </div>
@@ -236,7 +236,7 @@ Focusing in solution-driven web developer adept at contributing to highly collab
       <div class="col-lg-4 col-md-6">
         <div class="work-box">
           <div class="work-img">
-            <a href="https://currency-converter-app-gamma-ten.vercel.app/"> <img src="assets/img/project1.png" alt="project one image" class="img-fluid"></a>
+            <a href="https://currency-converter-zeta-woad.vercel.app/"> <img src="assets/img/project1.png" alt="project one image" class="img-fluid"></a>
           </div>
           <div class="work-content">
             <div class="row">
