--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -316,7 +316,7 @@ Solution-driven web developer adept at contributing to highly collaborative work
                       </h5>
                     </div>
                     <div>
-                      <form action="https://formspree.io/f/xjkyavwn" method="POST" class="php-email-form" id="contact-form">
+                      <form action="https://formspree.io/f/manepqod" method="POST" class="php-email-form" id="contact-form">
                         <div class="row">
                             <div class="col-md-12 mb-3">
                                 <div class="form-group">
