Chore: comment out script tag with main.js

--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -417,7 +417,7 @@ Solution-driven web developer adept at contributing to highly collaborative work
   
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <!-- <script src="assets/js/main.js"></script> -->
   <script src="assets/js/contact.js"></script>
 
 </body>
