Atualizações no formulário de contato e ajuste de endpoint para integração com o backend

--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -85,7 +85,7 @@
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Rodrigo Nunes </span></p>
                         <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>rodrigo79rfn@gmail.com</span></p>
+                        <p><span class="title-s">Email: </span> <span>rdefraganunes@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>(+64) 0212253555</span></p>
                       </div>
                     </div>
@@ -316,7 +316,7 @@ Solution-driven web developer adept at contributing to highly collaborative work
                       </h5>
                     </div>
                     <div>
-                      <form action="https://formspree.io/f/manepqod" method="POST" class="php-email-form" id="contact-form">
+                      <form action="https://new-portfolio-web-sgyr-llfj1bpyg-rodrigos-projects-2e367d33.vercel.app/api/sendEmail" method="POST" class="php-email-form" id="contact-form">
                         <div class="row">
                             <div class="col-md-12 mb-3">
                                 <div class="form-group">
@@ -365,6 +365,7 @@ Solution-driven web developer adept at contributing to highly collaborative work
                       </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> 2/10 Monowai street</li>
+
                         <li><span class="bi bi-phone"></span> (+64) 0212253555</li>
                         <li><span class="bi bi-envelope"></span> rdefraganunes@gmail.com</li>
                       </ul>
