--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -420,6 +420,7 @@ Solution-driven web developer adept at contributing to highly collaborative work
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/contact.js"></script>
+  <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
 
 </body>
 
