--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -280,6 +280,31 @@ Solution-driven web developer adept at contributing to highly collaborative work
         </div>
       </div>
 
+      <!-- Card 3 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="work-box">
+          <div class="work-img">
+            <a href="https://fullstackweek-barber-tcvr-guz576mx5-rodrigos-projects-2e367d33.vercel.app/"> <img src="assets/img/fsw_barber.png" alt="FSW Barber" class="img-fluid"></a>
+          </div>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">FSW Barber</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Web Design</span> / <span class="w-date">2023</span>
+                </div>
+              </div>
+              <div class="col-sm-4 text-end">
+                <a href="https://github.com/RodrigoNunes2004/fullstackweek-barber.git" class="btn btn-link p-0">
+                  <i class="bi bi-plus-circle fs-3"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
      
   </div>
 </section>
