--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -260,7 +260,7 @@ Solution-driven web developer adept at contributing to highly collaborative work
       <div class="col-lg-4 col-md-6">
         <div class="work-box">
           <div class="work-img">
-            <a href="https://fullstackweek-donalds-nu.vercel.app/fsw-donalds"><img src="assets/img/fsw-donalds.jpeg" alt="FSW Donalds" class="img-fluid"></a>
+            <a href="https://fullstackweek-donalds-nu.vercel.app/fsw-donalds"><img src="assets/img/fsw-donalds.jpg" alt="FSW Donalds" class="img-fluid"></a>
           </div>
           <div class="work-content">
             <div class="row">
